fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,14 @@
     flex-wrap: wrap;
     width: 100vw;
   }
-
 }
 
 /* Small screens */
 @media only screen and (max-width: 480px){
+  :root{
+    overflow-y: hidden;
+  }
+
   .content{
     flex-wrap: nowrap;
     width: 100%;
